# simvacation

./: .gitignore  .gitmodules  CHANGELOG.md  COPYING  Makefile.am  README.md  argcargv.c  argcargv.h  backend_null.c  backend_null.h  backend_vdb.h  configure.ac  genimbed.c  rabin.c  rabin.h  simunvacation.8  simunvacation.c  simvacation.8  simvacation.c  simvacation.conf  simvacation.h  simvacreport.c  vdb.c  vdb.h  vdb_berkeley.c  vdb_berkeley.h  vdb_lmdb.c  vdb_lmdb.h  vdb_null.c  vdb_null.h  vdb_redis.c  vdb_redis.h  vlu.c  vlu.h  vlu_ldap.c  vlu_ldap.h  vlu_null.c  vlu_null.h  vutil.c  vutil.h
.github/workflows/: build-dist.yml  build.yml
packaging/rpm/: simvacation.spec.in
test/: Makefile.am  conftest.py  sendmail  test_simvacation.py  unit_vutil.c
test/ldap/: data.ldif  local.ldif
